--- a/github-action/slides.html
+++ b/github-action/slides.html
@@ -233,7 +233,7 @@ Security
 
 --
 
-Pipeline
+[Pipeline](https://gitlab.com/gitlab-org/gitlab/pipelines/150787118)
 
 <img src="img/gitlab-pipeline.png" width="750" height="300">
 
@@ -282,7 +282,7 @@ steps:
 
 http://drone.nebula-graph.io:5010
 
-<img src="img/drone-github.png" alt="GitHub Actions result" width="700" height="300">
+<img src="img/drone-github.png" width="700" height="300">
 
 [For Example](http://drone.nebula-graph.io/vesoft-inc-private/nebula-common/64)
 
